[package]
name = "particle-frenzy"
description = "Simple 2D particle system"
version = "0.0.1"
repository = "https://github.com/leod/frenzy"
authors = [
   "leod <subtle.frustration@proton.me>",
]
license = "MIT"

[dependencies]
gfx = "0.17"
rand = "0.4"

[dev-dependencies]
ggez = "0.4"
gfx_device_gl = "0.15"
hsl = "0.1.1"
